# polars-mongo

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yaml
.cargo/: config.toml
.github/workflows/: release.yaml
crates/polars-mongo/: Cargo.toml
crates/polars-mongo/src/: conversion.rs  lib.rs
crates/polarsmongo2/: Cargo.toml  README.md
crates/polarsmongo2/src/: buffer.rs  conversion.rs  lib.rs  predicates.rs
crates/polarsmongo2/tests/: integration_test.rs
crates/polarsmongo2/tests/fixtures/: seed.json
examples/read_collection/: Cargo.toml
examples/read_collection/src/: main.rs
python/: Cargo.toml  README.md  __init__.py  main.py  pyproject.toml
python/benchmarks/: funcs.py  main.py
python/polars_mongo/: main.py
python/src/: lib.rs
scripts/: setup_db.sh
src/: buffer.rs  conversion.rs  lib.rs
tests/: integration_test.rs
