[package]
name = "polars-mongo"
version = "0.2.0"
edition = "2021"
authors = ["universalmind303 <cory.grinstead@gmail.com>"]
license = "MIT"
keywords = ["dataframe", "query-engine", "arrow", "polars", "database"]
description = "Connector to read polars dataframes from mongodb collections"
repository = "https://github.com/universalmind303/polars-mongo/"

[lib]
crate-type = ["lib"]


[dependencies]
mongodb = { version = "3.5.1", features = ["sync"] }
num = "0.4.3"
polars = {version = "0.53.0" ,features = ["lazy", "dtype-full"]}
polars-arrow = "0.53.0"
polars-core = "0.53.0"
polars-time = "0.53.0"
rayon = "1.11.0"
serde = {version =  "1.0.228",features = ["derive", "rc"], optional = true}
tokio = "1.50.0"



[profile.release]
lto = "fat"
opt-level = 3

[workspace]
members = [
  "examples/read_collection"
]
