[workspace]
resolver = "2"
members = [
    "crates/polarsmongo2",
    "examples/read_collection",
    "python"
]

[workspace.package]
version = "0.1.3"
edition = "2024"
authors = [
    "Ashish Thomas <ashishthomassm@gmail.com>",
    "universalmind303 <cory.grinstead@gmail.com>"
]
license = "MIT"
repository = "https://github.com/AThomas314/polars-mongo/"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "symbols"

[workspace.dependencies]
mongodb = { version = "3.5.1", features = ["sync"] }
polars = { version = "0.53.0", features = ["lazy", "dtype-full","is_in","timezones","object","serde",] }
polars-plan = { version = "0.53.0" }
polars-arrow = { version = "0.53.0" }
polars-core = { version = "0.53.0" }
polars-time = { version = "0.53.0" }
num = "0.4.3"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive", "rc"]}
tokio = "1.50.0"
