[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "polars-mongo"
dynamic = ["version"]
description = "A high-performance, lazy MongoDB connector for Polars."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Ashish Thomas", email = "ashishthomassm@gmail.com" },
    { name = "Cory Grinstead", email = "cory.grinstead@gmail.com" }
]
dependencies = [
    "polars>=1.38.0"
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
]

[tool.maturin]
module-name = "polars_mongo.polars_mongo"
