[package]
name = "polarsmongo2"
description = "Connector to read polars dataframes from mongodb collections with full projection pushdown, including nested fields, and predicate pushdown"
keywords = ["dataframe","lazyframe" , "polars", "mongo"]

# Inherit global settings from the root workspace
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
mongodb = {workspace=true}
polars = {workspace=true}
num  = {workspace=true}
polars-arrow  = {workspace=true}
polars-core  = {workspace=true}
polars-time  = {workspace=true}
polars-plan  = {workspace=true}
rayon  = {workspace=true}
serde = { workspace = true}
tokio = {workspace=true}



[dev-dependencies]
serde_json = "1.0.149"
testcontainers = { version = "0.27.1", features = ["blocking"] }
testcontainers-modules = { version = "0.15", features = ["mongo"] }
