[package]
name = "read_mongo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars-mongo = { path = "../.."}
polars = { version = "0.53.0", features = ["lazy"] }
dotenv = "0.15.0"
mongodb = "3.5.1"
